year 2024 day 24 + PackedArray